Add hierarchical seed sampling with 4 sampling methods and ML experiment tracking
Features:
- SeedExperimentManager: Manage hierarchical seeds (master  seeds  sub-seeds  ...)
- 4 Sampling Methods: simple, stratified, cluster, systematic random sampling
- ML Task Support: regression, classification, unsupervised, supervised learning
- Automatic Metrics: RMSE, MAE, R2, accuracy, F1, precision, recall, silhouette score
- DataFrame Export: CSV, JSON, Excel formats via pandas
- Metadata Tracking: Model type, hyperparameters, timestamps
- Summary Statistics: Aggregated metrics across all experiments

New files:
- Python/seedhash/experiment.py: Core experiment management module
- Python/examples/hierarchical_sampling.py: Comprehensive examples
- Updated Python/README.md with full documentation

--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -1,10 +1,13 @@
 # Core dependencies (none - uses only Python standard library)
 
+# Optional dependencies for experiment management
+pandas>=1.3.0  # For DataFrame-based experiment tracking and result export
+
 # Optional dependencies for deep learning framework support
 # Install with: pip install seedhash[torch] or pip install seedhash[all]
 torch>=1.7.0  # Optional: For PyTorch seeding
 tensorflow>=2.0.0  # Optional: For TensorFlow seeding
-numpy>=1.19.0  # Optional: For NumPy seeding
+numpy>=1.19.0  # Optional: For NumPy seeding and ML metrics
 
 # Development dependencies (optional)
 setuptools>=45
