--- a/jupyter/.jupyter/desktop-settings.json
+++ b/jupyter/.jupyter/desktop-settings.json
@@ -1,3 +1,4 @@
 {
-  "pythonPath": "C:\\Users\\huang\\anaconda3\\envs\\oral_gut\\python.exe"
+  "pythonPath": "C:\\Users\\huang\\anaconda3\\envs\\oral_gut\\python.exe",
+  "uiMode": "multi-document"
 }
