chore: Repository cleanup and organization
Removed temporary/generated files:
- Deleted 5 one-time helper scripts (check_*, fix_*, create_notebooks.py)
- Removed 9 generated CSV/JSON output files
- Removed old/deprecated Python/base.py
- Removed build artifacts (dist/, egg-info/)

Updated .gitignore:
- Added patterns for generated output files (*_results.csv/json)
- Added patterns for temporary scripts (cleanup_*, fix_*, check_*)
- Added Jupyter metadata directories (.jupyter/, .virtual_documents/)

Added .gitattributes:
- Configured proper line endings for all file types
- LF for Python, R, Jupyter, docs, config files
- CRLF for Windows batch/PowerShell scripts
- Binary handling for images, archives, fonts

Result: Clean, organized repository structure with proper Git configuration

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+.jupyter/
+.virtual_documents/
 
 # IPython
 profile_default/
@@ -132,3 +134,15 @@ dmypy.json
 # OS
 .DS_Store
 Thumbs.db
+
+# Generated output files
+*_results.csv
+*_results.json
+experiment_*.csv
+experiment_*.json
+
+# Temporary scripts
+cleanup_*.py
+fix_*.py
+check_*.py
+
