--- a/Python/pyproject.toml
+++ b/Python/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Deterministic seed generation from string inputs using MD5 hashing"
 readme = "README.md"
 authors = [
-    {name = "melhzy", email = "your.email@example.com"}
+    {name = "Ziyuan Huang", email = "ziyuan.huang@umassmed.edu"}
 ]
 license = {text = "MIT"}
 classifiers = [
